# gh-aw-python-typescript-project

./: .gitignore  README.md
.github/workflows/: daily-team-status.lock.yml  daily-team-status.md  daily-test-improver.lock.yml  daily-test-improver.md
python-project/: README.md  pyproject.toml
python-project/hello_lib/: __init__.py  __main__.py  hello.py
python-project/tests/: __init__.py  test_hello.py
typescript-project/: README.md  jest.config.js  package-lock.json  package.json
typescript-project/src/: cli.ts  hello.ts  index.ts
typescript-project/tests/: hello.test.ts
